--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,7 @@
               ],
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.dev.ts",
+                  "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
@@ -65,7 +65,34 @@
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ]
+            },
+            "staging": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.stg.ts"
+                }
+              ],
+              "outputHashing": "all"
             },
             "ci": {
               "progress": false
@@ -81,6 +108,9 @@
             },
             "development": {
               "buildTarget": "app:build:development"
+            },
+            "staging": {
+              "buildTarget": "app:build:staging"
             },
             "ci": {
               "progress": false
